--- a/InventoryManager.csproj
+++ b/InventoryManager.csproj
@@ -70,14 +70,21 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Commands\DeleteProductCommand.cs" />
+    <Compile Include="Commands\SearchPartCommand.cs" />
+    <Compile Include="Commands\SaveNewProductCommand.cs" />
     <Compile Include="Commands\CommandBase.cs" />
+    <Compile Include="Commands\AddAssociatedPartCommand.cs" />
+    <Compile Include="Commands\DeleteAssociatedPartCommand.cs" />
     <Compile Include="Commands\NavigateAddProductCommand.cs" />
     <Compile Include="Commands\NavigateHomeCommand.cs" />
     <Compile Include="Commands\NavigateAddPartCommand.cs" />
     <Compile Include="Stores\NavigationStore.cs" />
+    <Compile Include="Validators\NameValidator.cs" />
     <Compile Include="ViewModels\AddPartViewModel.cs" />
     <Compile Include="ViewModels\AddProductViewModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
+    <Compile Include="ViewModels\ErrorsViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\AddPartView.xaml.cs">
