Added and removed files

--- a/InventoryManager.csproj
+++ b/InventoryManager.csproj
@@ -73,19 +73,18 @@
     <Compile Include="Commands\DeletePartCommand.cs" />
     <Compile Include="Commands\DeleteProductCommand.cs" />
     <Compile Include="Commands\NavigateCommand.cs" />
-    <Compile Include="Commands\CancelModifiedProductCommand.cs" />
-    <Compile Include="Commands\SaveModifiedProductCommand.cs" />
-    <Compile Include="Commands\SaveModifiedPartCommand.cs" />
-    <Compile Include="Commands\SaveNewPartCommand.cs" />
+    <Compile Include="Commands\SavePartCommand.cs" />
+    <Compile Include="Commands\SaveProductCommand.cs" />
     <Compile Include="Commands\SearchProductCommand.cs" />
     <Compile Include="Commands\SearchPartCommand.cs" />
-    <Compile Include="Commands\SaveNewProductCommand.cs" />
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\AddAssociatedPartCommand.cs" />
     <Compile Include="Commands\DeleteAssociatedPartCommand.cs" />
+    <Compile Include="Interfaces\IPartViewModel.cs" />
+    <Compile Include="Interfaces\IProductViewModel.cs" />
+    <Compile Include="Interfaces\ISearchableViewModel.cs" />
     <Compile Include="Services\NavigationService.cs" />
     <Compile Include="Stores\NavigationStore.cs" />
-    <Compile Include="Validators\NameValidator.cs" />
     <Compile Include="ViewModels\ModifyPartViewModel.cs" />
     <Compile Include="ViewModels\AddPartViewModel.cs" />
     <Compile Include="ViewModels\ModifyProductViewModel.cs" />
